--- a/huxflux/index.html
+++ b/huxflux/index.html
@@ -6,31 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Huxflux</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔮</text></svg>">
 </head>
 
 <body>
     <div class="container flex-center">
-        <div class="wrapper">
-            <div class="title-row flex-center"><h1>
-                <span class="huxflux">H</span>
-                <span class="huxflux">U</span>
-                <span class="huxflux">X</span>
-                <span class="huxflux">F</span>
-                <span class="huxflux">L</span>
-                <span class="huxflux">U</span>
-                <span class="huxflux">X</span>
-            </h1>
-            </div>
-            <div class="ball-row flex-row flex-center"></div>
-            <div class="huxflux-row flex-row flex-center">
-                <button id="huxflux-button">Huxflux</button>
-                <button id="test-button">Test Code</button>
-            </div>
-            <div class="flex-row flex-center">
-                <h2 id="success" style="display: none;">🥂 Looks good!</h1>
-                <h2 id="fail" style="display: none;">🤔 Hmm, try again!</h2>
-                <ul id="fail-ul" style="display: none;">
-                </ul>
+        <div class="direction">
+            <div class="wrapper">
+                <nav id="nav-bar">
+                    <a href="https://github.com/evelinnidenfors/bygg-en-enkel-bot" target=_blank>Is it Friday?</a>
+                    <a href="https://github.com/evelinnidenfors/skapa-ett-konfetti-regn" target=_blank>Confetti Cannon</a>
+                </nav>
+                <div class="content">
+                    <div class="title-row flex-center"><h1>
+                        <span class="huxflux">H</span>
+                        <span class="huxflux">U</span>
+                        <span class="huxflux">X</span>
+                        <span class="huxflux">F</span>
+                        <span class="huxflux">L</span>
+                        <span class="huxflux">U</span>
+                        <span class="huxflux">X</span>
+                    </h1>
+                    </div>
+                    <div class="ball-row flex-row flex-center"></div>
+                    <div class="huxflux-row flex-row flex-center">
+                        <button id="huxflux-button">Huxflux</button>
+                        <button id="test-button">Test Code</button>
+                    </div>
+                    <div class="flex-row flex-center">
+                        <h2 id="success" style="display: none;">🥂 Looks good!</h1>
+                        <h2 id="fail" style="display: none;">🤔 Hmm, try again!</h2>
+                        <ul id="fail-ul" style="display: none;">
+                        </ul>
+                    </div>
+                </div>
+                <footer id="footer">
+                    <a href="https://evelinnidenfors.github.io/" target="_blank">
+                        <div class="ball-row flex-row flex-center"></div>
+                    </a>
+                </footer>
             </div>
         </div>
     </div>
