--- a/huxflux/index.html
+++ b/huxflux/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container flex-center">
         <div class="wrapper">
-            <div class="title-row flex-center"><h1>Övning: 
+            <div class="title-row flex-center"><h1>
                 <span class="huxflux">H</span>
                 <span class="huxflux">U</span>
                 <span class="huxflux">X</span>
@@ -23,8 +23,8 @@
             </div>
             <div class="ball-row flex-row flex-center"></div>
             <div class="huxflux-row flex-row flex-center">
-                <button id="huxflux-button">Huxflux</button>
-                <button id="test-button">Testa din Huxflux</button>
+                <button id="huxflux-button">Pkrova funtionen</button>
+                <button id="test-button">Kör tester på funktionen</button>
             </div>
             <div class="flex-row flex-center">
                 <h2 id="success" style="display: none;">Din huxflux fungerar enligt samtliga tester, snyggt!</h1>
@@ -32,10 +32,12 @@
                 <ul id="fail-ul" style="display: none;">
                 </ul>
             </div>
-        </div
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script type="module" src="javascripts/ball-creator.js"></script>
-    <script type="module" src="test/test.js"></script>
+    <script type="module" src="javascripts/test.js"></script>
+    
 </body>
 
 </html>
