--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="ball-row flex-row flex-center"></div>
             <div class="huxflux-row flex-row flex-center">
-                <button id="huxflux-button">Pkrova funtionen</button>
+                <button id="huxflux-button">Prova funtionen</button>
                 <button id="test-button">Kör tester på funktionen</button>
             </div>
             <div class="flex-row flex-center">
