--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
             </div>
             <div class="ball-row flex-row flex-center"></div>
             <div class="huxflux-row flex-row flex-center">
-                <button id="huxflux-button">Prova funtionen</button>
-                <button id="test-button">Kör tester på funktionen</button>
+                <button id="huxflux-button">Prova funktionen</button>
+                <button id="order-button">Prova sortering</button>
+                <button id="test-button">Kör tester</button>
             </div>
+
             <div class="flex-row flex-center">
                 <h2 id="success" style="display: none;">Din huxflux fungerar enligt samtliga tester, snyggt!</h1>
                 <h2 id="fail" style="display: none;">Hoppsan, något blev fel:</h2>
@@ -37,6 +39,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script type="module" src="javascripts/ball-creator.js"></script>
     <script type="module" src="javascripts/test.js"></script>
+    <script type="huxflux.js"></script>
     
 </body>
 
